[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Exercise/Exercise.gd" type="Script" id=2]
[ext_resource path="res://Exercise/decr_sound.wav" type="AudioStream" id=3]
[ext_resource path="res://Exercise/incr_sound.wav" type="AudioStream" id=4]
[ext_resource path="res://Font/font_large.tres" type="DynamicFont" id=5]

[node name="Exercise" type="Node2D"]
script = ExtResource( 2 )

[node name="SetRepCount" type="Label" parent="."]
margin_left = 299.0
margin_top = 16.0
margin_right = 578.0
margin_bottom = 194.0
custom_fonts/font = ExtResource( 5 )
text = "0 : 0"
align = 1
valign = 1

[node name="ExerciseName" type="Button" parent="."]
margin_left = 14.0
margin_top = 16.0
margin_right = 248.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 1 )
text = "Exercise Name"

[node name="AddRep" type="Button" parent="."]
margin_left = 14.0
margin_top = 122.0
margin_right = 92.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 1 )
text = "+"

[node name="MinusRep" type="Button" parent="."]
margin_left = 116.0
margin_top = 122.0
margin_right = 194.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 1 )
text = "-"

[node name="AddRepSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 533 )
stream = ExtResource( 4 )
volume_db = 1.0

[node name="MinusRepSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 533 )
stream = ExtResource( 3 )
volume_db = 1.0

[connection signal="pressed" from="ExerciseName" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="AddRep" to="." method="_on_AddRep_pressed"]
[connection signal="pressed" from="MinusRep" to="." method="_on_MinusRep_pressed"]
